# SEL-Alpha-Plane-Calculator

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  vite.config.js
src/: alpha-chart.js  alpha-math.js  main.js  styles.css  test-cards.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: alpha_math.rs  commands.rs  lib.rs  main.rs  models.rs
