[package]
name = "sel-alpha-plane-tool"
version = "1.0.0"
description = "SEL Alpha Plane Test Tool by Power-Link Technologies"
authors = ["Power-Link Technologies"]
edition = "2021"

[lib]
name = "sel_alpha_plane_tool_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
csv = "1.3"
